<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.upload.UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/preview_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_place_holder" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:fontFamily="@font/poppins_semibold"
                android:id="@+id/cameraXButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera"
                android:textColor="@color/white" />

            <Button
                android:fontFamily="@font/poppins_semibold"
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/gallery"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:autofillHints="" android:background="@drawable/rounded_edittext_background"
            android:hint="@string/description"
            android:gravity="top|start"
            android:inputType="text"
            android:padding="8dp"/>

        <Button
            android:fontFamily="@font/poppins_semibold"
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/upload"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_circle" />

</androidx.constraintlayout.widget.ConstraintLayout>
